lib: Remove the notion of arkoor-depth
We needed to limit arkoor-depth as a protection mechansim.
But once we have checkpoints that is not needed anymore
